# zaptools-python

./: .gitignore  CHANGELOG.md  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yaml
tests/: e2e_server.py  test_event_book.py  test_event_register.py  test_factories.py  test_helpers.py  test_zaptools.py
zaptools/: __init__.py  adapters.py  client.py  connection_router.py  connector.py  connectors.py  factories.py  fastapiconnector.py  helpers.py  meta_tag.py  models.py  protocols.py  protocols_v2.py  room.py  tools.py  tools_v2.py  wrappers.py  zap_logger.py
zaptools/EventRegister/: EventRegister.py  __init__.py
zaptools/FastApi/: Adapter.py  FastApiAdapter.py  __init__.py
zaptools/core/: __init__.py  event_processor.py  events.py  id_controller.py  websocket_connection.py
zaptools/customtypes/: types.py
zaptools/models/: SendingModel.py  ZapDataModel.py  socket_event_model.py
