[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zaptools"
description = "A toolkit for Event-Driven websocket management"
readme = "README.md"
authors = [{name = "Nathan Mejia", email = "nathandraco22@gmail.com"}]
version = "0.1.4"
requires-python = ">=3.10"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
]
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/NathanDraco22/zap-adapter-python"

[project.optional-dependencies]
dev = [
    "pytest"
]
