[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zaptools"
description = "A toolkit for Event-Driven websocket management"
readme = "README.md"
authors = [{name = "Nathan Mejia", email = "nathandraco22@gmail.com"}]
version = "0.3.0"
requires-python = ">=3.10"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
]
license = { file = "LICENSE" }
dependencies = [
    "rich>=13.9.4",
    "websockets>=14.1",
]

[project.urls]
"Homepage" = "https://github.com/NathanDraco22/zaptools-python"

[project.optional-dependencies]
dev = [
    "pytest"
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
]
